# ComplianceHub

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tunnel-url  AGENTS.md  CHAT_SESSION.md  CHERRY_STUDIO_ASSISTANTS.md  DEAD_CODE.md  Dockerfile.backend  Dockerfile.railway  HUMANIZE.md  IMMICH_SETUP.md  README.md  TODO.md  WINDOWS_SETUP.md  WINDOWS_TUNNEL.md  audit-disk.sh  docker-compose.yml  go.ps1  go.sh  opencode.json  opencode.json.template  railway.json  run.sh  setup-windows.ps1  setup-wsl.sh  start.sh  stop.sh  sync.ps1  sync.sh  test-api.sh  tunnel.sh  update-tunnel-opencode.sh  watchdog.sh
backend/: .env  .env.example  Dockerfile  compliancehub.db  download_local_model.sh  pyproject.toml  pytest.ini  requirements.txt  start.sh
backend/app/: config.py  main.py  models.py  settings.py  utils.py
backend/app/api/: audit.py
backend/app/routes/: __init__.py  ai.py  analytics.py  audit_programs.py  chat.py  clients.py  compliance.py  documents.py  excel.py  export.py  ims.py  projects.py  refine.py  surveillance.py  system.py  templates.py
backend/app/services/: __init__.py  ai_chat.py  ai_pipeline.py  audit_program.py  audit_workflow.py  bilingual.py  clause_data.py  client_config.py  db.py  doc_refiner.py  doc_schemas.py  document_generator.py  excel_generator.py  export_validator.py  file_parser.py  ims.py  iso_clause_database.json  manday_calculator.py  ocr.py  offline_generator.py  pdf_converter.py  pdf_generator.py  report_generator.py  surveillance.py  template_manager.py  validator.py
backend/app/services/ai/: __init__.py  (+19 more)
backend/scripts/: enrich_clause_data.py
backend/static/: style.css
backend/templates/: index.html
backend/templates/04_03_26_consense_audit_documentation/: BSO_Audit_Questionaire_ISO22301.docx  ENG-Form 'FM-BA-ZET-MS-All_AQC_EN' [English].docx  Form 'FM-TAGMBH-MSZ-001_Auditplan-EN' [English] (2).docx  Form 'FM-TAGMBH-MSZ-002_Auditplan-ISMS-EN' [English] (1).docx  Form 'FM-TAGMBH-MSZ-003_Audit-Report-IMS-EN' [English] (1).docx  Form 'FM-TAGMBH-MSZ-005_Participation-List-EN' [English].docx  Form 'FM-TAGMBH-MSZ-006_Remote-Audits-Risik-Analysis-EN' [English] (2).docx  (+6 more)
backend/tests/: conftest.py  test_ai_caching.py  test_ai_chat.py  test_ai_errors.py  test_ai_pipeline.py  test_ai_providers.py  test_ai_router.py  test_bilingual.py  test_chat_endpoint.py  test_clause_data.py  test_client_config.py  test_db.py  test_debugger.py  test_doc_refiner.py  test_document_generator.py  test_edit_field.py  test_export_validator.py  test_file_parser.py  test_groq_provider.py  test_ims.py  test_integration.py  test_json_utils.py  test_local_provider.py  test_manday_calculator.py  test_offline_generator.py  test_pdf_generator.py  test_rate_limiter.py  test_surveillance.py  test_template_manager.py  test_validator.py
(+76 files in other folders)
