[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "compliancehub"
version = "2.0.0"
description = "TÜV AUSTRIA audit & compliance document generation platform with AI-powered content and multi-standard support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["iso", "audit", "compliance", "tuv", "document-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "python-docx>=1.1.0",
    "fpdf2>=2.8.3",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.8",
]
test = [
    "pytest>=7",
    "pytest-cov>=4",
    "pyflakes>=3",
]
all = ["compliancehub[ai,test]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.pyflakes]
max_line_length = 120
