[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "compliancehub"
version = "2.0.0"
description = "TÜV AUSTRIA audit & compliance document generation platform with AI-powered content and multi-standard support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["iso", "audit", "compliance", "tuv", "document-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "openpyxl>=3.1.5",
    "lxml>=6.1",
    "pydantic>=2.13",
    "aiofiles>=24.1",
    "fpdf2>=2.8.3",
    "python-dotenv>=1.1",
    "requests>=2.34",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
ai = [
    "openai>=2.41",
    "anthropic>=0.105",
    "google-genai>=2.7",
]
test = [
    "pytest>=7",
    "pytest-cov>=4",
    "pyflakes>=3",
]
all = ["compliancehub[ai,test]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.pyflakes]
max_line_length = 120
